# zomdroid

./: README.md
.github/workflows/: ios-jit.yml  ios.yml  ios2-jit.yml  ios2.yml
app/src/main/cpp/: emulation.c  linker.c  logger.h  zomdroid.c  zomdroid.h  zomdroid_globals.h
ios/: CMakeLists.txt  DEPLOY.md  PORTING.md  README.md  build_ios.sh
ios/App/: Info.plist  ZomdroidAppDelegate.m  ZomdroidGameViewController.h  ZomdroidGameViewController.mm
ios/Resources/: launch_config.example.json
ios/Sources/: ZomdroidIOSBridge.mm  ZomdroidMathCompat.c  zomdroid_core_api_stub.c
ios/include/: zomdroid_core_api.h  zomdroid_math_compat.h
ios/patches/: box64-ios-compat.patch
ios2/: CMakeLists.txt  DEPLOY.md  PORTING.md  README.md  build_ios.sh  entitlements.sideload.plist  entitlements.trollstore.plist
ios2/App/: ZomdroidAppDelegate.h  main.m
ios2/Sources/: ZomdroidDyldInterpose.c
ios2/include/: elf.h  error.h  malloc.h  zomdroid_ios_bridge.h
ios2/include/sys/: epoll.h  prctl.h  ptrace.h  vfs.h
ios2/patches/: box64-ios-compat.patch
